--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 				height: 100%;
 			}
 			body{
-				background: url(img/bg2.jpg);
-				background-size: 100%;
+				background: url(img/bg2.jpg) center center no-repeat black;
 			}
 			
 			div{
