--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<title></title>
 		<style>
 			*{padding: 0;margin: 0;}
-			body{
+			html,body{
 				width: 100%;
 				height: 100%;
 			}
 			body{
-				background: url(img/bg2.jpg) center center no-repeat black;
-				background-size: 100%;
+				background: url(img/bg2.jpg) center center no-repeat white;
+				background-size: cover;
 			}
 			
 			div{
