--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				height: 100%;
 			}
 			body{
-				background: url(img/bg2.jpg) center center no-repeat white;
+				background: url(img/bg2.jpg) ;
 				background-size: cover;
 			}
 			
