--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		
 		<meta charset="UTF-8">
-		<title></title>
+		<title>祝慧莲生日快乐！！！</title>
+		<script >
+			
+		</script>
 		<style>
 			*{padding: 0;margin: 0;}
 			html,body{
@@ -10,8 +14,8 @@
 				height: 100%;
 			}
 			body{
-				background: url(img/bg2.jpg) ;
-				background-size: cover;
+				background: url(img/bg2.gif) center center no-repeat #5b1d90;
+				background-size: 80%;
 			}
 			
 			div{
@@ -27,6 +31,8 @@
 				animation: play 60s linear infinite;
 				
 			}
+			
+			
 			
 			@keyframes play{
 				0%{
@@ -63,17 +69,21 @@
 		</style>
 	</head>
 	<body>
-		<div>
+		
+		<video src="img/桐谷蝶々 - 初恋バタフライ (初恋蝴蝶).mp3" autoplay="autoplay" loop="loop" ></video>
+		<a href="index/bless.html">
+		<div title="生日快乐啊,开心每一天">
 			<img src="img/pic1.jpg"/>
-			<img src="img/pic2.png"/>
-			<img src="img/pic3.png" />
-			<img src="img/pic4.png"/>
+			<img src="img/pic2.jpg"/>
+			<img src="img/pic3.jpg" />
+			<img src="img/pic4.jpg"/>
 			<img src="img/pic5.jpg"/>
-			<img src="img/pic6.png"/>
-			<img src="img/pic7.png"/>
-			<img src="img/pic8.png"/>
-			<img src="img/pic9.png"/>
-			<img src="img/pic10.png"/>
+			<img src="img/pic6.jpg"/>
+			<img src="img/pic7.gif"/>
+			<img src="img/pic8.jpg"/>
+			<img src="img/pic9.jpg"/>
+			<img src="img/pic10.jpg"/>
 		</div>
+		</a>
 	</body>
 </html>
