--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	</head>
 	<body>
 		
-		<video src="img/桐谷蝶々 - 初恋バタフライ (初恋蝴蝶).mp3" autoplay="autoplay" loop="loop" ></video>
+		<audio src="img/桐谷蝶々 - 初恋バタフライ (初恋蝴蝶).mp3" autoplay="autoplay" loop="loop" ></audio>
 		<a href="index/bless.html">
 		<div title="生日快乐啊,开心每一天">
 			<img src="img/pic1.jpg"/>
