--- a/index/bless.html
+++ b/index/bless.html
@@ -18,7 +18,7 @@
 		</style>
 	</head>
 	<body style="background:url(../img/bg1.gif) center center no-repeat #e090a0;background-size:80 ;">
-		<video src="../img/SNH48 - 生日快乐.mp3" autoplay="autoplay" loop="loop"></video>
+		<audio src="../img/SNH48 - 生日快乐.mp3" autoplay="autoplay" loop="loop"></audio>
 		<div style="position: absolute;color: purple;width: 100%;height: 10%;text-align: center;font-size: 40px;">
 			<h1>祝可爱的慧莲生日快乐！！！</h1>
 		</div>
