--- a/index/bless.html
+++ b/index/bless.html
@@ -28,8 +28,8 @@
 			<p>&nbsp;&nbsp;一份缘分一份甜，一份真情在心间；一份问候一份爱，一份温馨御冬寒；一份牵挂一份情，一份短信送温暖！祝君生日快乐！</p>
 			<p>&nbsp;&nbsp;让时间寄去我的思念，让风儿捎去我的牵挂，让祝福带给你真真的喜悦，让真真的喜悦陪你度过快乐的生日，愿你生日快乐，永远幸福！</p>
 		</div>
-		<div style="margin-left:1500px;position: absolute;width: 500px;height: 100%;padding-top: 150px;">
-			<img src="../img/wKgCyVdM8s-WQqG8AAGjlMABFEM692.gif" />
+		<div style="position: fixed;float: right;margin-left:1200px;margin-top: 300px;">
+			<img src="../img/wKgCyVdM8s-WQqG8AAGjlMABFEM692.gif"/>
 		</div>
 	</body>
 </html>
