--- a/index/bless.html
+++ b/index/bless.html
@@ -13,9 +13,9 @@
 			}
 		</style>
 	</head>
-	<body style="background:url(../img/bg1.gif) center center no-repeat #e090a0;background-size:80 ;">
+	<body style="">
 		<audio src="../img/SNH48 - 生日快乐.mp3" autoplay="autoplay" loop="loop"></audio>
-		<div style="width: 300px;height: 500px;">
+		<div style="width: 300px;height: 500px;background:url(../img/bg1.gif) center center no-repeat #e090a0;background-size:80 ;">
 			<div style="position: absolute;color: purple;width: 100%;height: 10%;text-align: center;font-size: 40px;">
 			<h1>祝可爱的慧莲生日快乐！！！</h1>
 			</div>
