--- a/index/bless.html
+++ b/index/bless.html
@@ -13,7 +13,7 @@
 	<body style="background:url(../img/bg1.gif) center center no-repeat #e090a0;background-size:80 ;">
 		<audio src="../img/SNH48 - 生日快乐.mp3" autoplay="autoplay" loop="loop"></audio>
 		<div style="width: 300px;height: 400px;">
-			<h1 style="position: absolute;color: purple;width: 100%;height: 10%;text-align: center;font-size: 40px;">祝可爱的慧莲生日快乐！！！</h1>
+			<h1 style="color: purple;text-align: center;font-size: 40px;">祝可爱的慧莲生日快乐！！！</h1>
 			
 			<p>&nbsp;&nbsp;我亲爱的朋友，你还好吗？虽然现在我们相隔两地，但我对你的思念并没有丝毫减分，祝你在今天这个特殊的日子里，生日快乐，年年有今日，岁岁有今朝。</p>
 			<p>&nbsp;&nbsp;我托孔雀给你送去艳丽的衣装，我托白云给你送去自由的思想，我托大海给你送去牵挂的情肠，我托夜晚给你送去美梦连连。祝你生日快乐，天天幸福！</p>
