--- a/index/bless.html
+++ b/index/bless.html
@@ -14,12 +14,14 @@
 		<audio src="../img/SNH48 - 生日快乐.mp3" autoplay="autoplay" loop="loop"></audio>
 		<div style="width: 300px;height: 400px;">
 			<h1 style="color: purple;text-align: center;font-size: 40px;">祝可爱的慧莲生日快乐！！！</h1>
-			
-			<p>&nbsp;&nbsp;我亲爱的朋友，你还好吗？虽然现在我们相隔两地，但我对你的思念并没有丝毫减分，祝你在今天这个特殊的日子里，生日快乐，年年有今日，岁岁有今朝。</p>
+			<div>
+				<p>&nbsp;&nbsp;我亲爱的朋友，你还好吗？虽然现在我们相隔两地，但我对你的思念并没有丝毫减分，祝你在今天这个特殊的日子里，生日快乐，年年有今日，岁岁有今朝。</p>
 			<p>&nbsp;&nbsp;我托孔雀给你送去艳丽的衣装，我托白云给你送去自由的思想，我托大海给你送去牵挂的情肠，我托夜晚给你送去美梦连连。祝你生日快乐，天天幸福！</p>
 			<p>&nbsp;&nbsp;一份缘分一份甜，一份真情在心间；一份问候一份爱，一份温馨御冬寒；一份牵挂一份情，一份短信送温暖！祝君生日快乐！</p>
 			<p>&nbsp;&nbsp;让时间寄去我的思念，让风儿捎去我的牵挂，让祝福带给你真真的喜悦，让真真的喜悦陪你度过快乐的生日，愿你生日快乐，永远幸福！</p>
 			<img src="../img/wKgCyVdM8s-WQqG8AAGjlMABFEM692.gif"/>
+			</div>
+			
 
 		</div>
 		
