--- a/index/bless.html
+++ b/index/bless.html
@@ -8,6 +8,10 @@
 				margin: 0;
 				padding: 0;
 			}
+			img{
+				margin-top: 400px;
+				margin-left: 400px;
+			}
 		</style>
 	</head>
 	<body style="background:url(../img/bg1.gif) center center no-repeat #e090a0;background-size:80 ;">
