--- a/index/bless.html
+++ b/index/bless.html
@@ -36,7 +36,7 @@
 			</div>
 		</div>
 		<div id="happy">
-			<img src="../img/wKgCyVdM8s-WQqG8AAGjlMABFEM692.gif" width="200px" height="200px"/>
+			<img src="../img/wKgCyVdM8s-WQqG8AAGjlMABFEM692.gif" />
 		</div>
 	</body>
 </html>
