--- a/index/bless.html
+++ b/index/bless.html
@@ -9,10 +9,11 @@
 				padding: 0;
 			}
 			#happy{
+				position: absolute;
 				width: 200px;
 				height: 200px;
 				margin-left: -200px;
-				margin-top: 0px;
+				margin-top:300px;
 				position: absolute;
 				animation: run 4s linear infinite;
 				
@@ -34,9 +35,10 @@
 			<p>&nbsp;&nbsp;一份缘分一份甜，一份真情在心间；一份问候一份爱，一份温馨御冬寒；一份牵挂一份情，一份短信送温暖！祝君生日快乐！</p>
 			<p>&nbsp;&nbsp;让时间寄去我的思念，让风儿捎去我的牵挂，让祝福带给你真真的喜悦，让真真的喜悦陪你度过快乐的生日，愿你生日快乐，永远幸福！</p>
 			</div>
-		</div>
-		<div id="happy">
+			<div id="happy">
 			<img src="../img/wKgCyVdM8s-WQqG8AAGjlMABFEM692.gif" />
 		</div>
+		</div>
+		
 	</body>
 </html>
