--- a/index/bless.html
+++ b/index/bless.html
@@ -22,6 +22,9 @@
 				from{left: -200px;}
 				to{left: 800px;}
 			}
+			p{
+				font-size: 25px;
+			}
 		</style>
 	</head>
 	<body style="background:url(../img/bg1.gif) center center no-repeat #e090a0;background-size:80 ;">
