--- a/index/bless.html
+++ b/index/bless.html
@@ -30,7 +30,7 @@
 	<body style="background:url(../img/bg1.gif) center center no-repeat #e090a0;background-size:80 ;">
 		
 		<audio src="../img/SNH48 - 生日快乐.mp3" autoplay="autoplay" loop="loop"></audio>
-		<div style="width: 1000px;height: 1050px; border: 1px solid red;">
+		<div style="width: 1000px;height: 1050px; ">
 			<h1 style="color: purple;text-align: center;font-size: 40px;">祝可爱的慧莲生日快乐！！！</h1>
 			<div style="margin-left: 250px;margin-top: 100px;width: 700px;">
 				<p>&nbsp;&nbsp;我亲爱的朋友，你还好吗？虽然现在我们相隔两地，但我对你的思念并没有丝毫减分，祝你在今天这个特殊的日子里，生日快乐，年年有今日，岁岁有今朝。</p>
